# sagecoffee

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml
src/sagecoffee/: __init__.py  auth.py  client.py  http_api.py  logging.py  models.py  store.py  ws_client.py
src/sagecoffee/cli/: __init__.py  main.py
tests/: __init__.py  conftest.py  memory_stress.py  test_auth.py  test_http_api.py  test_logging.py  test_models.py  test_ws_client.py
tests/mocks/: http_mock.py  ws_mock.py
