[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sagecoffee"
version = "0.1.0"
description = "Python library and CLI for controlling Breville/Sage coffee machines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Simon Green", email = "simon@sjg.io" }
]
keywords = ["breville", "sage", "coffee", "iot", "smart-home"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.0",
    "typer[all]>=0.9.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.0.0",
]

[project.scripts]
sagectl = "sagecoffee.cli.main:app"

[project.urls]
Homepage = "https://github.com/simonjgreen/sagecoffee"
Repository = "https://github.com/simonjgreen/sagecoffee"

[tool.hatch.build.targets.wheel]
packages = ["src/sagecoffee"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "B904",   # raise-without-from-inside-except - intentional in CLI for exit codes
    "SIM105", # contextlib.suppress - explicit try/except is clearer
]

[tool.ruff.lint.per-file-ignores]
# Ignore line length in files with commented-out code
"src/sagecoffee/http_api.py" = ["E501"]
"src/sagecoffee/client.py" = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
